Fix extra padding that renders in chrome

--- a/webapp/titanembeds/static/css/embed.css
+++ b/webapp/titanembeds/static/css/embed.css
@@ -61,7 +61,6 @@ main {
   min-height: calc(100vh - 80px);
   overflow-x: hidden;
   height: 100%;
-  padding-bottom: 50px;
 }
 
 footer {
